@startuml:


class Cliente {
    - id
    - apellido
    - nombre 
    - email
}

class Empresa {
    - id
    - razon_social
    - email
}

class Equipo {
    - id
    - nombre
    - escudo
    - pais
}


class Apuesta {
    - id
    - monto 
    - monto_minimo
    - equipo_seleccionado
}

class Partido {
    - id
    - fecha
    - equipo_local
    - equipo_visitante
    - finalizado
    
}

Partido *-- Equipo: equipo_local
Partido *-- Equipo: equipo_visitante
Cliente --> Apuesta: Realiza apuesta
Cliente --|> Model
Empresa --|> Model
Equipo --|> Model
Partido --|> Model
Apuesta --> Partido: Se realiza sobre


@enduml